2014-05-22 Sarka Todorova <sarka.todorova@cern.ch>
	* default inert material blending turned off
	* tagged as MuonTrackingGeometry-01-00-10

2014-02-13 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix in sum of layer material (change of interface)
	* tagged as MuonTrackingGeometry-01-00-09

2014-02-06 Sarka Todorova <sarka.todorova@cern.ch>
	* change in material interface
	* tagged as MuonTrackingGeometry-01-00-08

2014-01-27 Sarka Todorova <sarka.todorova@cern.ch>
	* fix of layer material averaging
	* fix of spacer beams warnings
	* tagged as MuonTrackingGeometry-01-00-07

2014-01-14 Sarka Todorova <sarka.todorova@cern.ch>
	* cleanup of transform initialization 
	* output level configured
	* tagged as MuonTrackingGeometry-01-00-06

2013-12-03 Sarka Todorova <sarka.todorova@cern.ch>
	* allow larger enclosed volume (synchronized boundaries) 
	* tagged as MuonTrackingGeometry-01-00-05

2013-10-23 Niels van Eldik
	* new MuonIdHelpers
	* tagged as MuonTrackingGeometry-01-00-04

2013-10-10 Sarka Todorova <sarka.todorova@cern.ch>
	* partial build of MTG in mig5 
	* missing resolved active layers, turned off by default 
	* ( problems in gluing of subcomponents & identification )
	* tagged as MuonTrackingGeometry-01-00-03

2013-09-28 Niels van Eldik
	* cleanup config
	* tagged as MuonTrackingGeometry-01-00-02

2013-09-24 Sarka Todorova <sarka.todorova@cern.ch>
	* update (BinUtility,MaterialProperties) 
	* tagged as MuonTrackingGeometry-01-00-01

2013-08-22 Sarka Todorova <sarka.todorova@cern.ch>
	* migration to Eigen and new Trk::BinUtilities 
	* tagged as MuonTrackingGeometry-01-00-00

2013-05-12 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix in the position of NSW layers 
	* tagged as MuonTrackingGeometry-00-05-55

2013-05-03 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix in the identification of NSW stations ( station layer representation)
	* tagged as MuonTrackingGeometry-00-05-54

2013-04-21 Sarka Todorova <sarka.todorova@cern.ch>