@@ -1,3 +1,8 @@
+2014-09-10 Sarka Todorova <sarka.todorova@cern.ch>
+	* elevator stations included and identified
+	* default to resolved layers
+	* tagged as MuonTrackingGeometry-01-00-11
+
 2014-05-22 Sarka Todorova <sarka.todorova@cern.ch>
 	* default inert material blending turned off
 	* tagged as MuonTrackingGeometry-01-00-10
